Throw RangeError for invalid refDistance/maxDistance

The PannerNode refDistance and maxDistance attributes must throw a
RangeError on attempts to set either to a non-positive value.

BUG=666396
TEST=panner-distance-clamping.html

Review-Url: https://codereview.chromium.org/2512793003
Cr-Commit-Position: refs/heads/master@{#435993}

Former-commit-id: 3d0b06fe16bd256cc1dbe768d5b6d43c20f3f1ec